# price_match

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/service/app/: signals.py  tasks.py  urls.py  utils.py
backend/service/app/migrations/: 0001_initial.py  0002_initial.py  0003_alter_product_embedding.py
backend/service/app/models/: __init__.py  base.py  catalog.py  price_list.py  project.py  supplier.py
backend/service/app/schemas/: excel.py
backend/service/app/serializers/: __init__.py  catalog.py  estimate.py  price_list.py  project.py  supplier.py
backend/service/app/services/: __init__.py  excel.py  (+3 more)
backend/service/service/: asgi.py  celery.py  celeryconfig.py  config.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/: router.tsx
frontend/src/pages/: CatalogPage.tsx  EstimateDetailsPage.tsx  PriceListDetailsPage.tsx  ProjectsPage.tsx  SuppliersPage.tsx
nginx/: Dockerfile  nginx.conf
service/: ex.sh
service/app/: tasks.py  urls.py
service/app/migrations/: 0001_initial.py
service/app/models/: __init__.py  base.py  catalog.py  price_list.py  project.py
service/app/serializers/: __init__.py  estimate.py  price_list.py
service/app/services/: embeddings.py  excel.py  matching.py  parsing.py
service/app/views/: __init__.py  estimate.py  price_list.py  supplier.py
service/service/: celery.py  celeryconfig.py  config.py  settings.py  urls.py
(+14 files in other folders)
