[project]
name = "price_match"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "pandas>=3.0.4",
    "pgvector>=0.4.2",
    "pydantic-ai>=2.0.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
